# slime-mold-network

./: README.md  pyproject.toml
src/slime_mold_network/: slime_mold_network_mcp.py
