[project]
name = "slime-mold-network-mcp"
version = "1.0.0"
description = "MCP server for Physarum polycephalum morphological computation aesthetics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
